deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: activemq
  name: activemq
spec:
  ports:
  - name: "8161"
    port: 8161
    targetPort: 8161
  - name: "5672"
    port: 5672
    targetPort: 5672
  - name: "61616"
    port: 61616
    targetPort: 61616
  - name: "61613"
    port: 61613
    targetPort: 61613
  selector:
    io.kompose.service: activemq
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
    name: alfresco
spec:
    type: ClusterIP
    selector:
        io.kompose.service: alfresco
    ports:
    - port: 8080
      targetPort: 8080
      name: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: alfresco-pdf-renderer
  name: alfresco-pdf-renderer
spec:
  ports:
  - name: "8090"
    port: 8090
    targetPort: 8090
  selector:
    io.kompose.service: alfresco-pdf-renderer
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: imagemagick
  name: imagemagick
spec:
  ports:
  - name: "8090"
    port: 8090
    targetPort: 8090
  selector:
    io.kompose.service: imagemagick
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: libreoffice
  name: libreoffice
spec:
  ports:
  - name: "8090"
    port: 8090
    targetPort: 8090
  selector:
    io.kompose.service: libreoffice
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  ports:
  - name: "5432"
    port: 5432
    targetPort: 5432
  selector:
    io.kompose.service: postgres
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: proxy
  name: proxy
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: proxy
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
    name: share
spec:
    type: ClusterIP
    selector:
        io.kompose.service: share
    ports:
    - port: 8080
      targetPort: 8080
      name: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: solr6
  name: solr6
spec:
  ports:
  - name: "8983"
    port: 8983
    targetPort: 8983
  selector:
    io.kompose.service: solr6
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: tika
  name: tika
spec:
  ports:
  - name: "8090"
    port: 8090
    targetPort: 8090
  selector:
    io.kompose.service: tika
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: transform-misc
  name: transform-misc
spec:
  ports:
  - name: "8090"
    port: 8090
    targetPort: 8090
  selector:
    io.kompose.service: transform-misc
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: activemq
  name: activemq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: activemq
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: activemq
    spec:
      containers:
      - image: alfresco/alfresco-activemq:5.15.8
        imagePullPolicy: ""
        name: activemq
        ports:
        - containerPort: 8161
        - containerPort: 5672
        - containerPort: 61616
        - containerPort: 61613
        resources:
          limits:
            memory: "1073741824"
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: alfresco
  name: alfresco
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: alfresco
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: alfresco
    spec:
      containers:
      - env:
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              name: alfresco.alfresco-db.credentials
              key: password
        - name: ACCESS_KEY
          value: minioadmin
        - name: SECRET_KEY
          value: minioadmin
        - name: BUCKET_NAME
          value: alfresco
        - name: URL
          value: http://minio-service:9000
        - name: JAVA_OPTS
          value: " -Ddb.driver=org.postgresql.Driver -Ddb.username=alfresco -Ddb.password=$DB_PASSWORD
            -Ddb.url=jdbc:postgresql://alfresco-db.default.svc.cluster.local:5432/alfresco -Dsolr.host=solr6 -Dsolr.port=8983
            -Dsolr.secureComms=none -Dsolr.base.url=/solr -Dindex.subsystem.name=solr6
            -Dshare.host=share -Dshare.port=8080 -Dalfresco.host=alfresco -Dalfresco.port=8080
            -Daos.baseUrlOverwrite=http://localhost:8080/alfresco/aos -Dmessaging.broker.url=\"failover:(nio://activemq:61616)?timeout=3000&jms.useCompression=true\"
            -Ddeployment.method=DOCKER_COMPOSE\n-Dlocal.transform.service.enabled=true
            -DlocalTransform.pdfrenderer.url=http://alfresco-pdf-renderer:8090/ -DlocalTransform.imagemagick.url=http://imagemagick:8090/
            -DlocalTransform.libreoffice.url=http://libreoffice:8090/ -DlocalTransform.tika.url=http://tika:8090/
            -DlocalTransform.misc.url=http://transform-misc:8090/\n-Dlegacy.transform.service.enabled=true
            -Dalfresco-pdf-renderer.url=http://alfresco-pdf-renderer:8090/ -Djodconverter.url=http://libreoffice:8090/
            -Dimg.url=http://imagemagick:8090/ -Dtika.url=http://tika:8090/ -Dtransform.misc.url=http://transform-misc:8090/\n-Dcsrf.filter.enabled=false
            -Xms1500m -Xmx1500m "
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef: 
               name: alfresco.alfresco-db.credentials
               key: password
        image: soldann/alfresco-community-s3-contentstore:stable
        imagePullPolicy: ""
        name: alfresco
        resources:
          limits:
            memory: "1572864e3"
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: alfresco-pdf-renderer
  name: alfresco-pdf-renderer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: alfresco-pdf-renderer
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: alfresco-pdf-renderer
    spec:
      containers:
      - env:
        - name: JAVA_OPTS
          value: ' -Xms256m -Xmx512m'
        image: alfresco/alfresco-pdf-renderer:2.1.0
        imagePullPolicy: ""
        name: alfresco-pdf-renderer
        ports:
        - containerPort: 8090
        resources:
          limits:
            memory: "1073741824"
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: imagemagick
  name: imagemagick
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: imagemagick
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: imagemagick
    spec:
      containers:
      - env:
        - name: JAVA_OPTS
          value: ' -Xms256m -Xmx512m'
        image: alfresco/alfresco-imagemagick:2.1.0
        imagePullPolicy: ""
        name: imagemagick
        ports:
        - containerPort: 8090
        resources:
          limits:
            memory: "1073741824"
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: libreoffice
  name: libreoffice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: libreoffice
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: libreoffice
    spec:
      containers:
      - env:
        - name: JAVA_OPTS
          value: ' -Xms256m -Xmx512m'
        image: alfresco/alfresco-libreoffice:2.1.0
        imagePullPolicy: ""
        name: libreoffice
        ports:
        - containerPort: 8090
        resources:
          limits:
            memory: "1073741824"
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: postgres
    spec:
      containers:
      - args:
        - postgres
        - -c
        - max_connections=300
        - -c
        - log_min_messages=LOG
        image: postgres:11.4
        imagePullPolicy: ""
        name: postgres
        ports:
        - containerPort: 5432
        resources:
          limits:
            memory: "536870912"
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: proxy
  name: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: proxy
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: proxy
    spec:
      containers:
      - image: alfresco/acs-community-ngnix:1.0.0
        imagePullPolicy: ""
        name: proxy
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "134217728"
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: share
  name: share
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: share
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: share
    spec:
      containers:
      - env:
        - name: JAVA_OPTS
          value: ' -Xms500m -Xmx500m -Dalfresco.host=localhost -Dalfresco.port=8080
            -Dalfresco.context=alfresco -Dalfresco.protocol=http '
        - name: REPO_HOST
          value: alfresco
        - name: REPO_PORT
          value: "8080"
        image: alfresco/alfresco-share:6.2.0
        imagePullPolicy: ""
        name: share
        resources:
          limits:
            memory: "1073741824"
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: solr6
  name: solr6
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: solr6
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: solr6
    spec:
      containers:
      - env:
        - name: ALFRESCO_SECURE_COMMS
          value: none
        - name: SOLR_ALFRESCO_HOST
          value: alfresco
        - name: SOLR_ALFRESCO_PORT
          value: "8080"
        - name: SOLR_CREATE_ALFRESCO_DEFAULTS
          value: alfresco,archive
        - name: SOLR_JAVA_MEM
          value: -Xms2g -Xmx2g
        - name: SOLR_SOLR_HOST
          value: solr6
        - name: SOLR_SOLR_PORT
          value: "8983"
        image: alfresco/alfresco-search-services:1.4.0
        imagePullPolicy: ""
        name: solr6
        ports:
        - containerPort: 8983
        resources:
          limits:
            memory: "2147483648"
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: tika
  name: tika
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tika
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: tika
    spec:
      containers:
      - env:
        - name: JAVA_OPTS
          value: ' -Xms256m -Xmx512m'
        image: alfresco/alfresco-tika:2.1.0
        imagePullPolicy: ""
        name: tika
        ports:
        - containerPort: 8090
        resources:
          limits:
            memory: "1073741824"
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: transform-misc
  name: transform-misc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: transform-misc
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: transform-misc
    spec:
      containers:
      - env:
        - name: JAVA_OPTS
          value: ' -Xms256m -Xmx512m'
        image: alfresco/alfresco-transform-misc:2.1.0
        imagePullPolicy: ""
        name: transform-misc
        ports:
        - containerPort: 8090
        resources:
          limits:
            memory: "1073741824"
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
