ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alfresco-ingress
spec:
  rules:
  - http:
      paths:
      - path: /share
        pathType: Prefix
        backend:
          serviceName: share
          servicePort: 8080
      - path: /alfresco
        pathType: Prefix
        backend:
          serviceName: alfresco
          servicePort: 8080
